Disabled outsourcing link for webview

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: 'BMJUA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
-  font-family: 'Jua', sans-serif;
+  font-family: 'BMJUA', sans-serif;
   background-color: #ffffff;
   box-sizing: border-box;
   color: #35465d;
