--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-@font-face {
-  font-family: 'BMJUA';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
 body {
-  font-family: 'BMJUA', sans-serif;
+  font-family: 'Jua', sans-serif;
   background-color: #ffffff;
   box-sizing: border-box;
   color: #35465d;
@@ -108,6 +102,11 @@ body {
   border-radius: 40px;
   border: solid 1.5px #35465d;
   background-color: #35465d;
+}
+.color-btn {
+  border-radius: 40px;
+  border: none;
+  background: linear-gradient(-45deg, #33ccff 0%, #ff99cc 100%);
 }
 
 .try-again-text {
